# comics

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  dev_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml
comics/: __init__.py  api.py  constants.py  exceptions.py  gocomics.py
comics/constants/: __init__.py  endpoints.json
constants/: endpoints.json
src/comics/: __init__.py  _gocomics.py  exceptions.py  gocomics.py
src/comics/_constants/: __init__.py  _directory.py  endpoints.json
src/comics/constants/: __init__.py  directory.py  endpoints.json
tests/: test_api.py  test_directory.py  test_exceptions.py
