[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "comics"
dist-name = "comics"
author = "Ira Horecka"
author-email = "ira89@icloud.com"
home-page = "https://github.com/irahorecka/comics"
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
requires = ["beautifulsoup4>=4.11.0", "Pillow>=9.2.0", "python-dateutil>=2.8.0", "requests>=2.28.0"]
