[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "comics"
dynamic = ["version"]
description = "GoComics API wrapper"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
dependencies = [
    "beautifulsoup4>=4.11.0",
    "ipython>=8.5.0",
    "Pillow>=9.2.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["comics"]

[tool.setuptools.dynamic]
version = { attr = "comics.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
