[metadata]
name = comics
version = attr: comics.__version__
author = Ira Horecka
author_email = ira89@icloud.com
summary = A simple API for comic strips
description-file = README.md
home-page = https://github.com/irahorecka/comics
requires-dist = setuptools
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/irahorecka/comics/issues

[files]
packages =
    setup
    setup.cfg
    setup.cfg.extern
extra_files =
    LICENSE

[options]
zip_safe = false
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools>=38.3.0
install_requires =
    beautifulsoup4>=4.11.0
    Pillow>=9.2.0
    python-dateutil>=2.8.0
    requests>=2.28.0

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
